fix(Drawer): close action is not aligned anymore (#2455)

--- a/packages/components/src/Drawer/Drawer.scss
+++ b/packages/components/src/Drawer/Drawer.scss
@@ -87,6 +87,8 @@ $tc-drawer-z-index: $drawer-z-index !default;
 	&-title {
 		padding: $padding-normal;
 		position: relative;
+		display: flex;
+		align-items: center;
 
 		h1 {
 			font-size: $font-size-large;
@@ -97,6 +99,10 @@ $tc-drawer-z-index: $drawer-z-index !default;
 			width: 90%;
 			white-space: nowrap;
 			overflow: hidden;
+		}
+
+		:global(.tc-editable-text) {
+			flex: 1;
 		}
 
 		.drawer-close-action-tooltip {
